--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "jane-doe",
   "license": "MIT",
   "dependencies": {
-    "https":"latest"
+    "https":"latest",
+    "express": "latest",
+	"node-restful":"latest"
   },
   "engines": {
     "node": "4.1.1"
